Fix vertical alignment with avatar and text

--- a/app/styles/ui/history/_commit-summary.scss
+++ b/app/styles/ui/history/_commit-summary.scss
@@ -67,7 +67,9 @@
     margin-right: var(--spacing);
     font-size: var(--font-size-sm);
 
+    .avatar,
     .octicon {
+      display: inline-block;
       margin-right: var(--spacing-third);
       vertical-align: bottom;
     }
